--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-	background: url(img/background.jpg) no-repeat center fixed;
+	background: url(background.jpg) no-repeat center fixed;
 	background-size: cover; 
 }
 #header {
