--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ summary {
 	margin-top: 50px;
 }
 
+#news3 {
+	margin-left: 100px;
+	margin-top: 50px;
+}
+
 #teamleadersagain {
 	margin-left: 150px;
 	margin-top: 0px;
