--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ summary {
 	margin-top: 50px;
 }
 
+#news4 {
+	margin-left: 100px;
+	margin-top: 50px;
+
 #fst {
 	margin-left: 460px;
 	margin-top: 50px;
