--- a/style.css
+++ b/style.css
@@ -1,1 +1,168 @@
+#hdblock {
+	border: 37px solid #767ecf;
+	margin: -10px;
+}
 
+#logotype {
+	margin-left: 25px ;
+	margin-right: 0px ;
+	margin-top: -66px ;
+	margin-bottom: 0px ;
+
+}
+
+#officialmatches {
+	border: 20px solid #6f77c5 ;
+	width: 300px;
+	margin-left: 500px ;
+	margin-right: 0px ;
+	margin-top: 4px ;
+	margin-bottom: 0px ;
+}
+
+#textoffmatch {
+	font-family: "EA Font v1.5 by Ghettoshark";
+	font-size: 35px ;
+	color: white ;
+	margin-left: 525px ;
+	margin-right: 0px ;
+	margin-top: -39px ;
+	margin-bottom: 0px ;
+}
+
+#block1 {
+	margin-left: 330px;
+	margin-top: 50px;
+}
+
+#results {
+	margin-left: -21px;
+	margin-top: 0px;
+}
+
+#val {
+	margin-left: 455px;
+	margin-top: -3x;
+}
+
+
+summary {
+	outline: none ;
+}
+
+#news {
+	margin-left: 50px;
+	margin-top: 4px;
+}
+
+#teamleadersagain {
+	margin-left: 150px;
+	margin-top: 0px;
+}
+
+#officialmatchagain {
+	margin-left: 150px;
+	margin-top: 0px;
+}
+
+#liveagain {
+	margin-left: 150px;
+	margin-top: 0px;
+}
+
+
+
+#news1 {
+	margin-left: 100px;
+	margin-top: 50px;
+}
+
+#news2 {
+	margin-left: 100px;
+	margin-top: 50px;
+}
+
+#news3 {
+	margin-left: 100px;
+	margin-top: 50px;
+}
+
+#news4 {
+	margin-left: 100px;
+	margin-top: 50px;
+
+#fst {
+	margin-left: 460px;
+	margin-top: 50px;
+}
+
+#tst {
+	margin-left: 460px;
+	margin-top: 5px;
+}
+
+#trst {
+	margin-left: 460px;
+	margin-top: 5px;
+}
+
+
+#match2 {
+	margin-left: 330px;
+	margin-top: 20px;
+}
+
+#txtmatch {	
+   font-family: "EA Font v1.5 by Ghettoshark";
+   font-weight: bold ;
+   font-size:33px;
+   text-align:center;
+   margin-top: -86px;
+   color: #2B2B2B;
+}
+
+#txtmatch2 {	
+   font-family: "EA Font v1.5 by Ghettoshark";
+   font-weight: bold ;
+   font-size:20px;
+   text-align:center;
+   margin-top: -37px;
+   color: #474747;
+}
+
+#resh {	
+   font-family: "Arial";
+   font-weight: bold ;
+   font-size:20px;
+   text-align:center;
+   margin-top: -37px;
+   color: #474747;
+}
+
+#demo {
+  text-align: center;
+  font-size: 30px;
+  margin-top:-25px;
+  font-family: "EA Font v1.5 by Ghettoshark";
+  color: #B23F43;
+}
+
+#results2 {
+	margin-left: -21px;
+	margin-top: 0px;
+}
+
+#val2 {
+	margin-left: 455px;
+	margin-top: -5px;
+}
+
+#results3 {
+	margin-left: -21px;
+	margin-top: 0px;
+}
+
+#val3 {
+	margin-left: 455px;
+	margin-top: 50px;
+}
